--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ gunicorn==20.1.0
 idna==3.2
 kombu==4.6.11
 Pillow==8.3.2
+psycopg2-binary==2.9.3
 pytz==2021.1
 requests==2.26.0
 rest-framework-generic-relations==2.0.0
